# skiff

./: .gitignore  GEMINI.md  HANDOFF.md  README.md  verify_signaling.py
.commandcode/design/: checkup-report.html  checkup-report.md
.commandcode/taste/: taste.md
.github/workflows/: build.yml
trans_decoder_app/: Config.kt  HolePuncher.kt  WebSocketClient.kt  build.gradle.kts  debug.keystore  settings.gradle.kts
trans_decoder_app/app/: build.gradle.kts  proguard-rules.pro
trans_decoder_app/app/src/main/: AndroidManifest.xml
trans_decoder_app/app/src/main/java/com/transdecoder/: MainActivity.kt  SkiffBackgroundService.kt
trans_decoder_app/app/src/main/java/com/transdecoder/data/local/: AppDatabase.kt  Converters.kt  TransferDao.kt  TransferEntity.kt
trans_decoder_app/app/src/main/java/com/transdecoder/data/network/: WebSocketClient.kt
trans_decoder_app/app/src/main/java/com/transdecoder/domain/: TransferManager.kt
trans_decoder_app/app/src/main/java/com/transdecoder/ui/theme/: Theme.kt
trans_decoder_app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
trans_decoder_app/data/local/: TransferEntity.kt
trans_decoder_server/: Cargo.toml  handoff.md
trans_decoder_server/migrations/: 20260715000000_init.sql
trans_decoder_server/src/: config.rs  db.rs  main.rs  models.rs  signaling.rs
trans_decoder_server/src/handlers/: api.rs  mod.rs  ws.rs
